<resources>
    <string name="app_name">ChangeName</string>
    <string name="todo">TODO</string>
    <string name="hello_worl">Hello Worl!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="prompt">Choose a hobby</string>
    <string name="input1">Input1:</string>
    <string name="result">Result:</string>
    <string name="run">Run</string>
    <string name="input2">Input2</string>
    <string name="go_to">Go to</string>
    <string name="monitoring_is_off">Monitoring is off</string>
    <string name="zzz">Zzz</string>
    <string name="monitoring">Monitoring</string>
    <string-array name="hobbies">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string-array name="operator">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
    <string-array name="applications">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
</resources>