<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wallpaper" />

    <EditText
        android:id="@+id/inputNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input2input_textView"
        app:layout_constraintTop_toBottomOf="@+id/inputNumber1" />

    <Spinner
        android:id="@+id/operator_chooser"
        android:layout_width="79dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/operator"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/inputNumber1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input1input_textView"
        android:layout_width="55dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/input1"
        android:textColor="#795548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input2input_textView"
        android:layout_width="55dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/input2"
        android:textColor="#795548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1input_textView" />

    <TextView
        android:id="@+id/resultstext_textView"
        android:layout_width="55dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/result"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2input_textView" />

    <TextView
        android:id="@+id/calc_result_textView"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/resultstext_textView"
        app:layout_constraintTop_toBottomOf="@+id/inputNumber2" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/run"
        app:layout_constraintStart_toEndOf="@+id/calc_result_textView"
        app:layout_constraintTop_toBottomOf="@+id/operator_chooser" />

    <EditText
        android:id="@+id/inputNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input1input_textView"
        app:layout_constraintTop_toTopOf="@+id/background" />

</androidx.constraintlayout.widget.ConstraintLayout>