<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lecture9">

    <Button
        android:id="@+id/lecuter9_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="204dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lecuter9_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecuter9_button1" />

    <Button
        android:id="@+id/lectuer9_sendB_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="304dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecuter9_button1" />

    <ToggleButton
        android:id="@+id/Lecture9monitorBtn"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="40dp"
        android:text="@string/zzz"
        android:textColor="#455A64"
        android:textOff="@string/zzz"
        android:textOn="@string/monitoring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecuter9_button2" />

    <TextView
        android:id="@+id/Lecture9BatteryLevelText"
        android:layout_width="152dp"
        android:layout_height="33dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:text="@string/monitoring_is_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lecture9monitorBtn" />

    <TextView
        android:id="@+id/Lab9_textView"
        android:layout_width="152dp"
        android:layout_height="31dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lecture9BatteryLevelText" />
</androidx.constraintlayout.widget.ConstraintLayout>